--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 /* Global Font Import */
 @import url('https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic');
 
-/* Base Element Reset */
+/* Base Element Resets */
 /* These styles remove default margins, padding, and box-sizing to ensure a consistent layout across browsers. The Poppins font is applied globally. */
 * {
   margin: 0;
